# Kankan

./: README.md  kankan.vpp
Demo/: init.sql
Demo/build-kankan-Demo-Desktop_Qt_6_3_1_GCC_64bit-Debug/: Makefile
Demo/id生成策略/: boost_uuid  boost_uuid.cpp
Demo/kankan-Demo/: CMakeLists.txt  Kankan-Demo.pro  Kankan-Dome.pro  comment.h  commentbroker.cpp  commentbroker.h  kankan-Demo.pro  main.cpp  manuscript.cpp  manuscript.h  manuscriptbroker.cpp  manuscriptbroker.h  manuscriptproxy.cpp  manuscriptproxy.h  mytimer.cpp  netizen.cpp  netizen.h  netizenbroker.cpp  netizenbroker.h  netizenproxy.cpp  netizenproxy.h  relationalbroker.cpp  relationalbroker.h  video.cpp  video.h  videobroker.cpp  videobroker.h  videofile.h  videofilebroker.cpp  videofilebroker.h  videofileproxy.cpp  videoproxy.cpp  videoproxy.h  videosocialcontrol.cpp  videosocialcontrol.h
Demo/kankan-Demo/qml/: AccountInformation.qml  ChangeNickname.qml  ChangePassword.qml  CommentManger.qml  Delegate.qml  Dialogs.qml  EditManuscript.qml  FullScreen.qml  HomePage.qml  LoginPage.qml  MainPage.qml  ManuscriptPage.qml  MessageDialogs.qml  MyFriend.qml  PersonalPage.qml  PublishPage.qml  RegisterPage.qml  TimeDialog.qml  WatchVideo.qml  main.qml
Demo/mediaServer/: live555MediaServer
Demo/数据库脚本/: Kankan.sql
Kankan-Dome/: Kankan-Dome.pro  commentbroker.cpp  commentproxy.h  main.cpp  manuscriptbroker.h  manuscriptproxy.cpp  netizen.cpp  netizen.h  netizenbroker.cpp  relationalbroker.cpp  video.h  videoproxy.cpp  videoproxy.h  videosocialcontrol.cpp  videosocialcontrol.h
Kankan-Dome/image/: image.qrc
(+374 files in other folders)
